# Banco1

./: .dockerignore  .gitignore  AccountService.py  AsientoService.py  BaseDatosService.py  CorreoService.py  Dockerfile  GEMINI.md  InterbankService.py  ProviderService.py  README.md  TransferService.py  VoucherService.py  app.py  app_context_service.py  build.sh  iniciar_app.bat  launch.sh  main.py  pyproject.toml  requirements.txt  storage_paths.py  test_email_diagnostico.py  test_email_exchange.py  test_email_outlook.py  test_owa_fonafe.py  test_voucher_prueba.py
BD/: BASE CLIENTE ESTADO ACTUALIZADO.XLSX  CODIGO RECAUDO.XLSX  PREPAGOS.XLSX  TRABAJADORES.XLSX  config.json
_test_/: AccountEntries_test.py  Collect_test.py  Providers_test.py  Transfers_test.py
files/: account_features.json  asientos.xlsx  emails_cache.json  emails_send_report.csv  general_settings.json  movimientos.xlsx  recaudos.xlsx
files/vouchers/: voucher_CLI-00123456_u212prac01_distriluz_com_pe.html
static/css/: styles.css
templates/: asiento.html  base-datos.html  contactos_compartir.html  correo_electronico.html  correos.html  datos_privacidad.html  dispositivos.html  error.html  gestor_contrasenas.html  home.html  informacion_personal.html  iniciar_sesion.html  menu.html  mi_actividad.html  mi_contrasena.html  response.html  responseasiento.html  seguridad_inicio_sesion.html  vouchers.html
tools/: test_asiento_client.py
