[project]
name = "bancos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "blinker==1.6.2",
    "cachelib==0.9.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "et-xmlfile==1.1.0",
    "Flask==2.3.2",
    "Flask-Cache==0.13.1",
    "Flask-Caching==2.0.2",
    "Flask-Session==0.5.0",
    "gunicorn==21.2.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.2",
    "numpy==1.26.2",
    "openpyxl==3.1.2",
    "packaging==23.2",
    "pandas==2.1.4",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pyxlsb==1.0.10",
    "setuptools==65.5.0",
    "six==1.16.0",
    "tzdata==2023.3",
    "Werkzeug==2.3.4",
    "xlrd==2.0.1",
]
